--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap');
-#content {
-    max-width: 960px;
-      margin: 0 auto;
-    }
- body {
-     background-color: #1858e0;
-    font-family: Raleway;
- }
+body {
+    max-width: 900px;
+    margin: 0 auto;
+    background-color: white;
+    padding: 1em;
+}
