--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@
         padding: 1em;
     }
 
-    .student-pic {
+    .studentPic {
         max-width: 120px;
         float: right;
         border-radius: 10px;
