--- a/styles.css
+++ b/styles.css
@@ -29,12 +29,10 @@
     }
 
     .studentPic {
-        max-width: 120px;
         float: right;
-        border-radius: 10px;
-        box-shadow: #5B5B5D 5px 5px 10px;
-        margin-right: 10px;
-        margin-top: 10px;
+        margin: 0.75em;
+        box-shadow: 0px 0px 12px var(--primary-background-color);
+        border-radius: 0.25em;
     }
 
     footer {
