--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,7 @@
         padding: 1em;
     }
 
-    .studentPic {
+    studentPic {
         float: right;
         margin: 0.75em;
         box-shadow: 0px 0px 12px var(--primary-background-color);
