--- a/styles.css
+++ b/styles.css
@@ -28,26 +28,9 @@
         padding: 1em;
     }
 
-    studentPic {
+    .studentPic {
         float: right;
         margin: 0.75em;
         box-shadow: 0px 0px 12px var(--primary-background-color);
         border-radius: 0.25em;
     }
-
-    footer {
-        text-align: center;
-    }
-    
-    header .block {
-        border-radius: var(--rounded-edges-block) var(--rounded-edges-block) 0em 0em;   
-    }
-    
-    footer .block {
-        border-radius: 0em 0em var(--rounded-edges-block) var(--rounded-edges-block);
-    }
-    
-    .student {
-        padding: 1px 0em 1px 5em;
-    }
-    
