--- a/styles.css
+++ b/styles.css
@@ -39,3 +39,9 @@
         color: var(--last-updated-font-color);
         font-size: 0.85em;
     }
+
+    .lessons {
+        margin-top: 0.5em;
+        margin-bottom: em;
+        font-weight: 600;
+    }
