--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@
         --block-background-color: #83B4A6;
         --last-updated-font-color: #682F37;
     
-        /* MEASUREMENTS */
+
         --rounded-edges-hidden: 1em;
         --rounded-edges-block: calc(var(--rounded-edges-hidden) - 0.2em);
     }
@@ -29,19 +29,8 @@
     }
 
     .studentPic {
-        float: left;
+        float: right;
         margin: 0.75em;
-        box-shadow: 0px 0px 12px var(--primary-background-color);
+        box-shadow: 0px 0px 12px var(--base-font-color);
         border-radius: 0.25em;
-    }
-
-    .lessons {
-        margin-top: 0.5em;
-        margin-bottom: em;
-        font-weight: 600;
-    }
-
-    .lastUpdated {
-        color: var(--last-updated-font-color);
-        font-size: 0.85em;
     }
