--- a/styles.css
+++ b/styles.css
@@ -19,18 +19,71 @@
     }
     
     html {
-        background-color: var(--secondary-background-color);
-        font-family: var(--heading-font);
+        background-color: var(--primary-background-color);
+        font-family: var(--base-font);
         color: var(--base-font-color);
     }
-
+    
+    body {
+        max-width: 700px; 
+        margin: 0 auto;
+        background-color: var(--secondary-background-color);
+        border-radius: var(--rounded-edges-hidden); 
+    }
+    
     main {
         padding: 1em;
     }
-
-    .studentPic {
+    
+    footer {
+        text-align: center;
+    }
+    
+    .block {
+        background-color: var(--block-background-color);
+        font-family: var(--block-font);
+        color: var(--block-font-color);     
+    }
+    
+    header .block {
+        border-radius: var(--rounded-edges-block) var(--rounded-edges-block) 0em 0em;   
+    }
+    
+    footer .block {
+        border-radius: 0em 0em var(--rounded-edges-block) var(--rounded-edges-block);
+    }
+    
+    .student {
+        padding: 1px 0em 1px 5em;
+    }
+    
+    .studentPhoto {
         float: right;
         margin: 0.75em;
-        box-shadow: 0px 0px 12px var(--base-font-color);
-        border-radius: 0.25em;
+        box-shadow: 0px 0px 12px var(--primary-background-color);
+        border-radius: 0.25em;    
     }
+    
+    .title {
+        margin-bottom: 0.0em;
+    }
+    
+    .lessons {
+        margin-top: 0.5em;
+        margin-bottom: em;
+        font-weight: 600;
+    }
+    
+    .credit {
+        padding: 1px 0em 1px 0.1em;
+    }
+    
+    footer a:link, footer a:visited {
+        color: var(--block-font-color);
+    }
+    
+    .lastUpdated {
+        color: var(--last-updated-font-color);
+        font-size: 0.85em;
+    }
+    
