--- a/styles.css
+++ b/styles.css
@@ -1,44 +1,61 @@
 @import url('https://fonts.googleapis.com/css2?family=Kufam&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap');
 
-    :root {
-        
-        --heading-font: "Kufam";
-        --paragraph-font: "Open Sans Condensed";    
-    
-       
-        --base-font-color: #5D81BE;
-        --block-font-color: white;
-        --one-background-color: #D0EAF2;
-        --block-background-color: #83B4A6;
-        --last-updated-font-color: #682F37;
-    
+html {
+    background-color: #f1faee;
+}
 
-        --rounded-edges-hidden: 1em;
-        --rounded-edges-block: calc(var(--rounded-edges-hidden) - 0.2em);
-    }
+header {
+    font-family: "Kufam";
+    text-align: center;
+    color: #a8dadc;
+    border-radius: .5em;
+    background-color: #f1faee;
+}
 
-    html {
-        background-color: #D0EAF2;
-        font-family: "Kufam";
-        color: #5D81BE;
-    }
+.lessons {
+    text-align: left;
 
-    body {
-        max-width: 700px;
-        margin: 0 auto;
-        background-color: #83B4A6;
-        border-radius: var(--rounded-edges-hidden);
-    }
+}
 
-    main {
-        padding: 1em;
-    }
+.studentPortal {
+    padding: 2px;
+}
 
-    .studentPic {
-        float: right;
-        margin: 0.75em;
-        box-shadow: 0px 0px 12px var(--one-background-color);
-        border-radius: 0.25em;    
-    }
-    
+.studentPic {
+    max-width: 200px;
+    float: right;
+    border-radius: .5em;
+    margin: 2em;
+    box-shadow: 0px 0px 8px #a8dadc;
+}
+
+main {
+    text-align: center;
+    font-size: 20px;
+    font-family: "Open Sans Condensed";
+    color: #1d3557;
+    background-color: #f1faee;
+}
+
+body {
+    background-color: #f1faee;
+    max-width: 700px;
+    margin: auto;
+    border-radius: .5em;
+}
+
+footer {
+    padding: .5em;
+    text-align: center;
+    font-size: medium;
+    font-family: "Open Sans Condensed";
+    color: #1d3557;
+    margin-top: 18px;
+    background-color: #f1faee;
+    border-radius: .5em;
+}
+
+.dateModified {
+    color: #1d3557;
+}
