--- a/styles.css
+++ b/styles.css
@@ -34,7 +34,7 @@ main {
     font-size: 20px;
     font-family: "Open Sans Condensed";
     color: #1d3557;
-    background-color: #f1faee;
+    background-color: #1d3557;
 }
 
 body {
