--- a/styles.css
+++ b/styles.css
@@ -38,7 +38,7 @@ main {
 }
 
 body {
-    background-color: #f1faee;
+    background-color: #1d3557;
     max-width: 700px;
     margin: auto;
     border-radius: .5em;
