--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@ header {
     float: right;
     border-radius: .5em;
     margin: 2em;
-    box-shadow: 0px 0px 8px #a8dadc;
+    box-shadow: 0px 0px 8px #1d3557;
 }
 
 main {
