--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ header {
     text-align: center;
     color: #a8dadc;
     border-radius: .5em;
-    background-color: #1d3557;
+    background-color: #f1faee;
 }
 
 .lessons {
