--- a/styles.css
+++ b/styles.css
@@ -38,7 +38,7 @@ main {
 }
 
 body {
-    background-color: #a8dadc;
+    background-color: #457b9d;
     max-width: 700px;
     margin: auto;
     border-radius: .5em;
