--- a/styles.css
+++ b/styles.css
@@ -8,10 +8,10 @@ html {
 header {
     font-family: "Kufam";
     text-align: center;
-    color: #f1faee;
+    color: #1d3557;
     border-radius: .5em;
     background-color: #1d3557;
-}
+}a
 
 .lessons {
     text-align: left;
