--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ header {
     text-align: center;
     color: #f1faee;
     border-radius: .5em;
-    background-color: #f1f1f1;
+    background-color: #f1faee;
 }a
 
 .lessons {
