--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@ header {
 }
 
 main {
-    text-align: left;
+    text-align: center;
     font-size: 20px;
     font-family: "Open Sans Condensed";
     color: #1d3557;
