--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ html {
 header {
     font-family: "Kufam";
     text-align: center;
-    color: #f1faee;
+    color: #1d3557;
     border-radius: .5em;
     background-color: #f1faee;
 }a
