--- a/small.css
+++ b/small.css
@@ -11,7 +11,7 @@ header {
     color: #1d3557;
     border-radius: .5em;
     background-color: #f1faee;
-}a
+}
 
 .lessons {
     text-align: left;
