--- a/small.css
+++ b/small.css
@@ -31,7 +31,7 @@ header {
 
 main {
     text-align: center;
-    font-size: 20px;
+    font-size: 15px;
     font-family: "Open Sans Condensed";
     color: #1d3557;
     background-color:#f1faee;
@@ -47,7 +47,7 @@ body {
 footer {
     padding: .5em;
     text-align: center;
-    font-size: medium;
+    font-size: small;
     font-family: "Open Sans Condensed";
     color: #1d3557;
     margin-top: 18px;
