--- a/small.css
+++ b/small.css
@@ -7,6 +7,12 @@ html {
 
 h1 {
     font-size: 1.5rem;
+    margin: 0.15rem;
+}
+
+h2 {
+    font-size: 1.5rem;
+    margin: 0.15rem;
 }
 
 header {
