--- a/small.css
+++ b/small.css
@@ -24,10 +24,7 @@ header {
 
 .studentPic {
     max-width: 200px;
-    float: right;
-    border-radius: .5em;
-    margin: 2em;
-    box-shadow: 0px 0px 8px #a8dadc;
+    height: auto;
 }
 
 main {
