--- a/medium.css
+++ b/medium.css
@@ -9,7 +9,7 @@
 
     .studentPic {
         border-radius: .5em;
-        float: 
+        float: right;
         box-shadow: 0px 0px 8px #a8dadc;
     }
     
