--- a/lesson2/design.principles.css
+++ b/lesson2/design.principles.css
@@ -12,5 +12,110 @@
 }
 
 html {
-    background-color
+    background-color: var(--background-color);
+}
+
+body {
+    max-width: 900px;
+    margin: 0 auto;
+}
+
+img {
+    max-width: 100%;
+}
+
+h1 {
+    font-family: var(--heading-font);
+    color: var(--background-color);
+}
+
+.name {
+    font-family: var(--heading-font);
+    color: var(--background-color);
+
+p {
+    font-family: var(--paragraph-font);
+}
+
+h2 {
+    font-family: var(--heading-font);
+    color: var(--background-color);
+}
+
+header, footer {
+    background-color: var(--secondary-color);
+    text-align: center;
+    padding: 1em;
+}
+
+footer {
+    color: var(--primary-color);
+    font-family: var(--paragraph-font);
+}
+
+footer a:link, footer a:visited{
+    color: var(--background-color);
+}
+
+main {
+    background-color: var(--background-color);
+    display: grid;
+    grid-template-columns: 1fr;
+    padding: 1em;
+}
+
+section {
+    padding: .5em;
+    border: 5px solid var(--secondary-color);
+    font-family: var(--paragraph-font);
+    max-width: 100%;
+}
+
+#updated {
+    color: hotpink;
+    font-size: 12px;
+}
+
+@media only screen and (min-width: 32.5em) {
+    main {
+        display: grid;
+        grid-template-columns: 2fr 2fr; 
+    }
+    .first {
+        grid-row: 1;
+        grid-column: 1;
+    } 
+    .second {
+        grid-row: 1;
+        grid-column: 2;
+    }
+    .third {
+        grid-row: 2;
+        grid-column: 1 / 3;
+
+    }
+}
+
+@media only screen and (min-width: 50em) {
+    main{
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+
+    h1 {
+        font-size: 2.5rem;
+    }
+
+    .first {
+        grid-row: 1;
+        grid-column: 1;
+    }
+    .second {
+        grid-row: 1;
+        grid-column: 2;
+    }
+    .third {
+        grid-row: 1;
+        grid-column: 3;
+    }
 }
