--- a/lesson2/design.principles.css
+++ b/lesson2/design.principles.css
@@ -26,7 +26,7 @@ img {
 
 h1 {
     font-family: var(--heading-font);
-    color: var(--background-color);
+    color: var(--secondary-color);
 }
 
 .name {
@@ -40,7 +40,7 @@ p {
 
 h2 {
     font-family: var(--heading-font);
-    color: var(--background-color);
+    color: var(--secondary-color);
 }
 
 header, footer {
