--- a/lesson2/design.principles.css
+++ b/lesson2/design.principles.css
@@ -31,7 +31,7 @@ h1 {
 
 .name {
     font-family: var(--heading-font);
-    color: var(--secondary-color);
+    color: var(--background-color);
 }
 
 p {
