--- a/lesson2/design.principles.css
+++ b/lesson2/design.principles.css
@@ -37,7 +37,7 @@ h1 {
 p {
     font-family: var(--paragraph-font);
     color: var(--secondary-color);
-    font-size: 14px;
+    font-size: 1.5em;
 }
 
 h2 {
