--- a/lesson2/design-principles.css
+++ b/lesson2/design-principles.css
@@ -80,7 +80,7 @@ section {
 
 @media only screen and (min-width: 32.5em) {
     main {
-        grid-template-columns: 1fr 1fr; 
+        grid-template-columns: 1fr 1fr 1fr; 
     }
 }
 
