--- a/lesson2/design-principles.css
+++ b/lesson2/design-principles.css
@@ -78,6 +78,10 @@ section {
     font-size: 12px;
 }
 
+a {
+    background-color: white;
+}
+
 @media only screen and (min-width: 32.5em) {
     main {
         grid-template-columns: 1fr 1fr 1fr; 
