--- a/lesson2/design-principles.css
+++ b/lesson2/design-principles.css
@@ -82,6 +82,9 @@ a {
     background-color: white;
 }
 
+element.style {
+    color: white;
+}
 @media only screen and (min-width: 32.5em) {
     main {
         grid-template-columns: 1fr 1fr 1fr; 
