--- a/lesson3/color.css
+++ b/lesson3/color.css
@@ -1,3 +1,8 @@
+:root {
+    /* change the values below to your colors from your palette */
+    --primary-color: #03045E;
+    --secondary-color: #0077B6;
+    --accent1-color: #999999;
 .scheme {
     width: 100%;
     min-width: 350px;
@@ -10,4 +15,13 @@
   .scheme td{
     width: 25%;
     height: 3em;
+  }
+  .primary {
+    background-color: var(--primary-color);
+  }
+  .secondary {
+    background-color: var(--secondary-color);
+  }
+  .accent1 {
+    background-color: var(--accent1-color);
   }
