--- a/lesson3/color.css
+++ b/lesson3/color.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=PT+Sans&family=Sansita+Swashed:wght@300&display=swap');
 :root {
     /* change the values below to your colors from your palette */
     --primary-color: #03045E;
