--- a/lesson3/color.css
+++ b/lesson3/color.css
@@ -4,6 +4,7 @@
     --primary-color: #03045E;
     --secondary-color: #0077B6;
     --accent1-color: #999999;
+}
 .scheme {
     width: 100%;
     min-width: 350px;
