--- a/lesson3/color.css
+++ b/lesson3/color.css
@@ -4,29 +4,50 @@
     --primary-color: #03045E;
     --secondary-color: #0077B6;
     --accent1-color: #999999;
+    --background-colo: white;
 
     --heading-font: 'Sansita Swashed', cursive;
     --paragraph-font: 'PT Sans', sans-serif;
 }
-.scheme {
-    width: 100%;
-    min-width: 350px;
-    margin: auto;
-    text-align: center;
-  }
-  .scheme th {
+
+html{
     background-color: white;
-  }
-  .scheme td{
-    width: 25%;
-    height: 3em;
-  }
-  .primary {
-    background-color: var(--primary-color);
-  }
-  .secondary {
-    background-color: var(--secondary-color);
-  }
-  .accent1 {
+}
+
+body {
+    margin: auto 0;
     background-color: var(--accent1-color);
-  }
+    max-width: 80%;
+}
+
+main {
+    padding: 1em;
+    border-radius: 10px;
+}
+
+p {
+    font-family: var(--paragraph-font);
+    color: var(--secondary-color);
+}
+
+h1 {
+    font-family: var(--heading-font);
+    color: var(--primary-color);
+}
+
+header h1 {
+    color:var(--primary-color);
+    font-size: 50px;
+}
+
+header, footer {
+    background-color: var(--primary-color);
+    text-align: center;
+    padding: 1em;
+    border-radius: 10px;
+}
+
+footer {
+    color: var(--accent1-color);
+    font-family: var(--paragraph-font);
+}
