--- a/lesson3/color.css
+++ b/lesson3/color.css
@@ -3,7 +3,7 @@
     /* change the values below to your colors from your palette */
     --primary-color: #03045E;
     --secondary-color: #0077B6;
-    --accent1-color: #999999;
+    --accent1-color: #E0E0E0;
     --background-colo: white;
 
     --heading-font: 'Sansita Swashed', cursive;
