--- a/lesson3/color.css
+++ b/lesson3/color.css
@@ -35,6 +35,11 @@ h1 {
     color: var(--primary-color);
 }
 
+h2 {
+    font-family: var(--heading-font);
+    color: var(--primary-color);
+}
+
 header h1 {
     color:var(--accent1-color);
     font-size: 50px;
