--- a/lesson3/index.css
+++ b/lesson3/index.css
@@ -35,3 +35,24 @@ h1 {
     color: var(--primary-color);
 }
 
+nav {
+    font-family: var(--heading-font);
+    color: var(--background-color);
+    font-weight: bold;
+    font-size: 20px;
+}
+nav ul {
+    list-style: none;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(6em, 1fr));
+    background: var(--secondary-color);
+    padding: 2em;
+    border-radius: 10px;
+}
+nav a:link, nav a:visited {
+    color: var(--background-color);
+    text-decoration: none;
+}
+nav a:hover {
+    color: var(--accent2-color);
+}
