--- a/lesson3/target.css
+++ b/lesson3/target.css
@@ -40,6 +40,12 @@ h2 {
     color: var(--primary-color);
 }
 
+h3{
+    font-family: var(--heading-font);
+    color: var(--primary-color);
+}
+}
+
 header h1 {
     color:var(--accent1-color);
     font-size: 50px;
