--- a/lesson3/target.css
+++ b/lesson3/target.css
@@ -4,7 +4,7 @@
     --primary-color: #03045E;
     --secondary-color: #0077B6;
     --accent1-color: #E0E0E0;
-    --background-colo: white;
+    --background-color: white;
 
     --heading-font: 'Sansita Swashed', cursive;
     --paragraph-font: 'PT Sans', sans-serif;
