--- a/lesson3/index.css
+++ b/lesson3/index.css
@@ -102,7 +102,7 @@ nav a:hover {
 @media only screen and (min-width: 60em) {
     main{
         display: grid;
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: 1fr;
     }
 
     h1 {
