--- a/lesson3/target.css
+++ b/lesson3/target.css
@@ -90,5 +90,5 @@ nav a:link, nav a:visited {
     text-decoration: none;
 }
 nav a:hover {
-    color: var(--accent1-color);
+    color: var(--primary-color);
 }
