--- a/lesson3/typography.css
+++ b/lesson3/typography.css
@@ -75,5 +75,5 @@ nav a:link, nav a:visited {
     text-decoration: none;
 }
 nav a:hover {
-    color: var(--accent1-color);
+    color: var(--primary-color);
 }
