--- a/lesson3/index.css
+++ b/lesson3/index.css
@@ -45,6 +45,10 @@ header h1 {
     font-size: 50px;
 }
 
+header h2 {
+    color: var(--accent1-color);
+}
+
 header, footer {
     background-color: var(--primary-color);
     text-align: center;
