--- a/lesson3/color.css
+++ b/lesson3/color.css
@@ -2,7 +2,7 @@
 :root {
     --primary-color: #03045E;
     --secondary-color: #0077B6;
-    --accent1-color: #E0E0E0;
+    --accent1-color: #EEFFCC;
     --background-color: white;
 
     --heading-font: 'Sansita Swashed', cursive;
