--- a/lesson3/color.css
+++ b/lesson3/color.css
@@ -15,7 +15,7 @@ html{
 
 body {
     margin: 0 auto;
-    background-color: var(--accent1-color);
+    background-color: var(--backround-color);
     max-width: 80%;
 }
 
