--- a/lesson4/css/small.css
+++ b/lesson4/css/small.css
@@ -113,3 +113,7 @@ nav a:hover {
       color: var(--secondary-color);
       font-family: var(--paragraph-font);
   }
+
+  br.responsive{
+    display: inline;
+}
