--- a/lesson4/css/small.css
+++ b/lesson4/css/small.css
@@ -128,3 +128,9 @@ nav a:hover {
 }
 
 nav ul.hide {display: none;}
+
+.clearfix:after {
+    content: "";
+    display: table;
+    clear: both;
+}
