--- a/lesson4/css/small.css
+++ b/lesson4/css/small.css
@@ -23,7 +23,7 @@ html{
 body {
     margin: 0 auto;
     background-color: var(--accent1-color);
-    max-width: 80%;
+    border-radius: 30px;
 }
 
 main {
