--- a/lesson4/css/small.css
+++ b/lesson4/css/small.css
@@ -55,6 +55,12 @@ header h2 {
     color: var(--accent1-color);
 }
 
+header {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 header, footer {
     background-color: var(--primary-color);
     text-align: center;
