--- a/lesson4/css/medium.css
+++ b/lesson4/css/medium.css
@@ -3,7 +3,7 @@
     nav {
         background: var(--primary-color); /* Old browsers */
         
-        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff3232', endColorstr='#aa0000',GradientType=0 ); /* IE6-9 */
+        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff3232', endColorstr='#aa0000',GradientType=0 );
         
     }
         
