--- a/lesson4/css/large.css
+++ b/lesson4/css/large.css
@@ -1,7 +1,7 @@
 @media only screen and (min-width: 60em) {
 
     nav {
-        background: var(--primary-color); /* Old browsers */
+        background: var(--primary-color);
         
         filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff3232', endColorstr='#aa0000',GradientType=0 );    
     }
