--- a/lesson4/css/small.css
+++ b/lesson4/css/small.css
@@ -83,12 +83,18 @@ nav {
 }
 nav ul {
     list-style: none;
-    display: grid;
     grid-template-columns: repeat(auto-fit, minmax(6em, 1fr));
     background: var(--secondary-color);
-    padding: 2em;
+    padding: 0;
+    margin: 0;
    
 }
+nav ul li a {
+    display: block;
+    padding: .8%;
+    color: rgba(255,255,255,0.8);
+    border-top: 1px solid rgba(0,0,0,0.3);
+  }
 nav a:link, nav a:visited {
     color: var(--background-color);
     text-decoration: none;
