--- a/lesson4/css/small.css
+++ b/lesson4/css/small.css
@@ -79,12 +79,12 @@ footer a:link, footer a:visited {
 nav button {
     background-color: transparent;
     border: none;
-    color: var(--secondary-color);
+    color: var(--accent1-color);
 }
 nav {
     font-family: var(--heading-font);
-    color: var(--background-color);
-    font-weight: bold;
+    background-color: var(--secondary-color);
+    line-height: 35px;
     font-size: 20px;
 }
 nav ul {
