--- a/lesson4/css/small.css
+++ b/lesson4/css/small.css
@@ -59,6 +59,7 @@ header {
     display: flex;
     align-items: center;
     justify-content: center;
+    padding-right: 40px;
 }
 
 header, footer {
