--- a/lesson4/css/small.css
+++ b/lesson4/css/small.css
@@ -103,6 +103,9 @@ nav ul li a {
     color: rgba(255,255,255,0.8);
     border-top: 1px solid rgba(0,0,0,0.3);
   }
+nav ul li.active a{
+    background-color: var(--primary-color);
+}
 nav a:link, nav a:visited {
     color: var(--background-color);
     text-decoration: none;
