--- a/lesson4/css/small.css
+++ b/lesson4/css/small.css
@@ -111,7 +111,7 @@ nav a:link, nav a:visited {
     text-decoration: none;
 }
 nav a:hover {
-    color: var(--primary-color);
+    color: var(--accent1-color);
 }
   
   .content {
