--- a/lesson4/css/small.css
+++ b/lesson4/css/small.css
@@ -129,7 +129,7 @@ nav a:hover {
 .moto {
     font-style: italic;
     letter-spacing: 1pt;
-    color: var(--secondary-color);
+    color: var(--accent1-color);
     margin-left: 20px;
     font-size: 1em;
     font-family: var(--paragraph-font);
