--- a/lesson5/css/small.css
+++ b/lesson5/css/small.css
@@ -166,7 +166,7 @@ html, body{
       position: absolute;
       top: 50px;
       left: 50px;
-      background: radial-gradient var(--background-color);
+      background: radial-gradient(#03045E, #BCF8EC);
       border: 1px solid var(--primary-color);
       padding: .5rem;
       box-shadow: 0 0 30px #777;
