--- a/lesson5/css/small.css
+++ b/lesson5/css/small.css
@@ -158,7 +158,7 @@ html, body{
       margin: 10px auto;
       position: relative;
       border: 1px dashed var(--primary-color);
-      width: 885px;
+      width: 960px;
       height: 300px;
   }
 
@@ -170,17 +170,20 @@ html, body{
       border: 1px solid var(--primary-color);
       padding: .5rem;
       box-shadow: 0 0 30px #777;
+      opacity: .8;
   }
 
   .banner-image{
     height: 300px;
-    width: 883px;
+    width: 960px;
   }
 
   .herodiv h3{
-      font-family: var(--heading-font);
-  }
+    font-family: var(--heading-font);
+    color: var(--accent1-color)
+}
 
-  .herodiv p{
-      font-family: var(--paragraph-font);
-  }
+.herodiv p{
+    font-family: var(--paragraph-font);
+    color: var(--accent1-color);
+}
