--- a/lesson5/css/small.css
+++ b/lesson5/css/small.css
@@ -166,7 +166,7 @@ html, body{
       position: absolute;
       top: 2em;
       left: 2em;
-      background: radial-gradient(#03045E, #BCF8EC);
+      background: radial-gradient(#03045E, #03045E);
       border: 1px solid var(--primary-color);
       padding: .5rem;
       box-shadow: 0 0 30px #777;
