--- a/lesson5/css/small.css
+++ b/lesson5/css/small.css
@@ -187,3 +187,7 @@ html, body{
     font-family: var(--paragraph-font);
     color: var(--accent1-color);
 }
+
+.weather-image{
+    align-items: center;
+}
