--- a/lesson5/css/small.css
+++ b/lesson5/css/small.css
@@ -196,11 +196,11 @@ html, body{
       margin: 10px auto;
       position: relative;
       border: 1px dashed var(--primary-color);
-      width: 960px;
-      height: 300px;
+      width: 600px;
+      height: 150px;
 }
 
 .forecast-table{
-        border: 1px solid black;
+        border: 1px solid var(--primary-color);
       }
 }
