--- a/lesson5/css/small.css
+++ b/lesson5/css/small.css
@@ -198,6 +198,7 @@ html, body{
       border: 1px dashed var(--primary-color);
       width: 600px;
       height: 150px;
+      background-color: lightgrey;
 }
 
 .forecast-table{
