--- a/lesson5/css/small.css
+++ b/lesson5/css/small.css
@@ -222,3 +222,9 @@ h3 {
     font-size: 20px;
     color: var(--primary-color)
   }
+
+  article.div{
+      width: 960px;
+      height: 500px;
+      background-color: lightgrey;
+  }
