--- a/lesson5/css/small.css
+++ b/lesson5/css/small.css
@@ -231,3 +231,9 @@ h3 {
     height: 550px;
     background-color: lightgrey;
 }
+
+.article h1{
+    text-align: left; 
+    padding-left: 20px;
+    padding-top: 10px;
+  }
