--- a/lesson5/css/small.css
+++ b/lesson5/css/small.css
@@ -286,7 +286,6 @@ h3 {
   }
 
   #big-banner {
-    /* Other styles */
-    display: none;
     color: white;
+    font-family: var(--paragraph-font);
     }
