--- a/lesson5/css/small.css
+++ b/lesson5/css/small.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=PT+Sans&family=Sansita+Swashed:wght@300&display=swap');
+/*@import url('https://fonts.googleapis.com/css2?family=PT+Sans&family=Sansita+Swashed:wght@300&display=swap');*/
 :root {
     --primary-color: #03045E;
     --secondary-color: #00507A;
