--- a/lesson5/css/small.css
+++ b/lesson5/css/small.css
@@ -202,6 +202,10 @@ html, body{
       background-color: lightgrey;
 }
 
+.forecast h3 {
+    align-items: center;
+}
+
 td {
     font-family: var(--paragraph-font);
     color: var(--primary-color);
