--- a/lesson5/css/small.css
+++ b/lesson5/css/small.css
@@ -151,8 +151,8 @@ html, body{
       margin: 10px auto;
       background-color: #eee;
       border: 1px solid #333;
-      width: 98%;
-      height: 250px;
+      width: auto;
+      height: 100%;
   }
 
   .herodiv {
