--- a/lesson5/css/small.css
+++ b/lesson5/css/small.css
@@ -197,6 +197,8 @@ html, body{
       margin: 10px auto;
       position: relative;
       border: 3px dashed var(--primary-color);
+      width: 600px;
+      height: 220px;
       background-color: lightgrey;
 }
 
